Aggregate reports improvments: new graphics, dynamic tables...
Former-commit-id: 933399c83fd3e2ef8a5232db82917ffe8c8b72f3

--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -271,22 +271,22 @@ fieldset p {
 						</div>
 					</fieldset>
 
-					<fieldset class="servicioAccesibilidad" id="historico">
-						<legend>Hist&oacute;rico</legend>
-						<p>El servicio de diagn&oacute;stico puede guardar el
-							resultado del an&aacute;lisis asoci&aacute;ndolo a la url (p. ej.
-							para www.dominio.es) e incorporar en el informe su evolutivo
-							respecto a ejecuciones anteriores.</p>
-						<input id="registerAnalysis" type="checkbox"
-							name="registerAnalysis" value="true" disabled="true" /> <label
-							id="lb-registerAnalysis" for="registerAnalysis"
-							style="padding-left: 7px"> <span class="bold">Añadir
-								al hist&oacute;rico <span id="disabled_info">(Esta opción
-									solo está disponible para análisis de 17 páginas)</span>
-						</span>
-						</label> <span class="help-block">Guarda los resultados y añade el
-							evolutivo en el informe.</span>
-					</fieldset>
+<!-- 					<fieldset class="servicioAccesibilidad" id="historico"> -->
+<!-- 						<legend>Hist&oacute;rico</legend> -->
+<!-- 						<p>El servicio de diagn&oacute;stico puede guardar el -->
+<!-- 							resultado del an&aacute;lisis asoci&aacute;ndolo a la url (p. ej. -->
+<!-- 							para www.dominio.es) e incorporar en el informe su evolutivo -->
+<!-- 							respecto a ejecuciones anteriores.</p> -->
+<!-- 						<input id="registerAnalysis" type="checkbox" -->
+<!-- 							name="registerAnalysis" value="true" disabled="true" /> <label -->
+<!-- 							id="lb-registerAnalysis" for="registerAnalysis" -->
+<!-- 							style="padding-left: 7px"> <span class="bold">Añadir -->
+<!-- 								al hist&oacute;rico <span id="disabled_info">(Esta opción -->
+<!-- 									solo está disponible para análisis de 17 páginas)</span> -->
+<!-- 						</span> -->
+<!-- 						</label> <span class="help-block">Guarda los resultados y añade el -->
+<!-- 							evolutivo en el informe.</span> -->
+<!-- 					</fieldset> -->
 
 					<fieldset class="servicioAccesibilidad">
 						<legend>Tipo de informe</legend>
