Basic service complexity config
Conditional sections on agregate report


Former-commit-id: a2b81323b79d00bf384e3803cadff01c327a74dc

--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -193,36 +193,45 @@ fieldset p {
 							<fieldset>
 								<legend>Opciones de rastreo</legend>
 
-								<p>La profundidad y la amplitud determinan cuantas
+								<p>La complejidad, determinan la profundidad y la amplitud y cu&aacute;ntas
 									p&aacute;ginas se analizar&aacute;n en el informe
 									(profundidad*amplitud) y c&oacute;mo se hace la
 									selecci&oacute;n aleatoria de &eacute;stas. Si se desea
 									analizar una p&aacute;gina en concreto se puede indicar su URL
 									y especificar profundidad=1 y amplitud=1</p>
-
+									
 								<p class="form-inline">
-									<label for="profundidad">Profundidad:</label> <select
-										id="profundidad" name="profundidad" class="form-control">
-										<option selected="selected" value="1">1</option>
-										<option value="2">2</option>
-										<option value="3">3</option>
-										<option value="4">4</option>
+									<label for="complexity">Complejidad:</label> <select
+										id="complexity" name="complexity" class="form-control">
+										<option value="1">Baja</option>
+										<option selected="selected" value="2">Media</option>
+										<option value="3">Alta</option>
 									</select>
 								</p>
 
-								<p class="form-inline">
-									<label for="amplitud">Amplitud:</label> <select id="amplitud"
-										name="amplitud" class="form-control">
-										<option selected="selected" value="1">1</option>
-										<option value="2">2</option>
-										<option value="3">3</option>
-										<option value="4">4</option>
-										<option value="5">5</option>
-										<option value="6">6</option>
-										<option value="7">7</option>
-										<option value="8">8</option>
-									</select>
-								</p>
+<!-- 								<p class="form-inline"> -->
+<!-- 									<label for="profundidad">Profundidad:</label> <select -->
+<!-- 										id="profundidad" name="profundidad" class="form-control"> -->
+<!-- 										<option selected="selected" value="1">1</option> -->
+<!-- 										<option value="2">2</option> -->
+<!-- 										<option value="3">3</option> -->
+<!-- 										<option value="4">4</option> -->
+<!-- 									</select> -->
+<!-- 								</p> -->
+
+<!-- 								<p class="form-inline"> -->
+<!-- 									<label for="amplitud">Amplitud:</label> <select id="amplitud" -->
+<!-- 										name="amplitud" class="form-control"> -->
+<!-- 										<option selected="selected" value="1">1</option> -->
+<!-- 										<option value="2">2</option> -->
+<!-- 										<option value="3">3</option> -->
+<!-- 										<option value="4">4</option> -->
+<!-- 										<option value="5">5</option> -->
+<!-- 										<option value="6">6</option> -->
+<!-- 										<option value="7">7</option> -->
+<!-- 										<option value="8">8</option> -->
+<!-- 									</select> -->
+<!-- 								</p> -->
 
 								<p>Si desea que la selecci&oacute;n aleatoria de
 									p&aacute;ginas se realice dentro del &uacute;ltimo
@@ -383,7 +392,7 @@ fieldset p {
 		<div id="creditos">
 			Copyright &#169; 2019 - <span class="negrita">Ministerio de
 				Pol&iacute;tica Territorial y Funci&oacute;n P&uacute;blica</span> &nbsp;
-			Versi&#243;n: <b>5.0.0-beta1</b>
+			Versi&#243;n: <b>5.0.0</b>
 		</div>
 	</div>
 	<script type="application/javascript">
