Fix diagnostico.html page missing javascript code
Update wcag-em report to minclude details of errors

Updata conexion_pae.jso to alineate with 5.0.0 version of OAW


Former-commit-id: 2fa656268ce86b90a0cce9f9655bd351ca83a4d5

--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -310,7 +310,25 @@ fieldset p {
 		
 		
 		
-		
+		$("#radio-1").click(function () {
+          $("#crawler").show();
+          $("#urlset").hide();
+          $("#source").hide();
+        });
+
+        $("#radio-2").click(function () {
+          $("#crawler").hide();
+          $("#urlset").show();
+          $("#source").hide();
+          $("#historico").show();
+        });
+
+        $("#radio-3").click(function () {
+          $("#crawler").hide();
+          $("#urlset").hide();
+          $("#source").show();
+          $("#historico").hide();
+        });
 		
 		
 		
