Basic service UNE-EN301549:2019 report changes
Update organization logo


Former-commit-id: db9948b18afe438ab9d9dbd1de830908612f609e

--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -28,7 +28,7 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
 	<div id="cabeza">
 		<h1>
 			<img class="pull-left" src="/oaw/images/logo.jpg" alt="Observatorio de Accesibilidad Web" /> <img
-				src="/oaw/images/logo-mptfp.png"
+				src="/oaw/images/logo-vice-maetd.png"
 				alt="MINHAFP - Ministerio de Pol&iacute;tica Territorial y Funci&oacute;n P&uacute;blica" width="265px" />
 		</h1>
 	</div>
