--- a/portal/src/main/webapp/javascript.html
+++ b/portal/src/main/webapp/javascript.html
@@ -8,7 +8,7 @@
 
 <script>
 	window.onload = function(){
-		document.getElementById("image").innerHTML = '<span>Imagen</span><img src="/oaw/images/logo-mptfp.png"/>';
+		document.getElementById("image").innerHTML = '<span>Imagen</span><img src="/oaw/images/logo-vice-maetd.png"/>';
 		document.getElementById("footer").innerHTML = '<span>Pie de p&#225;gina</span><a href="/accesibilidad.html">Accesibilidad</a>';
 	};
 </script>
