Add extra fields to IRA to equate ods/xlsx

--- a/wcagem-tool/wcag-em-report-tool/app/index.html
+++ b/wcagem-tool/wcag-em-report-tool/app/index.html
@@ -69,6 +69,7 @@
   <script src="scripts/services/context/evalContextV2.js"></script>
   <script src="scripts/services/context/evalContextV3.js"></script>
   <script src="scripts/services/knownTechnologies.js"></script>
+  <script src="scripts/services/thematicScopes.js"></script>
   <script src="scripts/services/reportStorage.js"></script>
   <script src="scripts/services/evalLoader.js"></script>
   <script src="scripts/services/evalWindow.js"></script>
@@ -88,6 +89,8 @@
   <script src="scripts/directives/evaluate/infoField.js"></script>
   <script src="scripts/directives/evaluate/inputPages.js"></script>
   <script src="scripts/directives/evaluate/techSelect.js"></script>
+  <script src="scripts/directives/evaluate/thematicSelect.js"></script>
+  
   <script src="scripts/directives/evaluate/iconButton.js"></script>
   <script src="scripts/directives/buttonCollapse.js"></script>
   <script src="scripts/directives/fullReport.js"></script>
