--- a/wcagemtool/app/index.html
+++ b/wcagemtool/app/index.html
@@ -64,8 +64,7 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-translate/angular-translate.js"></script>
-  <script
-    src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+  <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
   <script src="bower_components/rangy/rangy-core.js"></script>
   <script src="bower_components/rangy/rangy-classapplier.js"></script>
   <script src="bower_components/rangy/rangy-highlighter.js"></script>
