--- a/wcagemtool/app/index.html
+++ b/wcagemtool/app/index.html
@@ -14,12 +14,10 @@
   <!-- Bower CSS -->
   <link rel='stylesheet' href="bower_components/textAngular/dist/textAngular.css">
   <!--------------->
-  <!-- Font Awesome -->
-  <script src="https://use.fontawesome.com/59311b20ac.js"></script>
-  <!------------------>
-
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!--  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-185820825-1"></script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-185820825-1"></script>
+
   <script>
 
     window.dataLayer = window.dataLayer || [];
@@ -31,18 +29,9 @@
     gtag('config', 'UA-185820825-1');
 
   </script>
-  -->
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E6DPRJ0RY3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-E6DPRJ0RY3');
-  </script>
-
+  <!-- Font Awesome -->
+  <script src="https://use.fontawesome.com/59311b20ac.js"></script>
+  <!------------------>
 </head>
 
 <body ng-app="wcagReporter">
@@ -64,7 +53,8 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-translate/angular-translate.js"></script>
-  <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+  <script
+    src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
   <script src="bower_components/rangy/rangy-core.js"></script>
   <script src="bower_components/rangy/rangy-classapplier.js"></script>
   <script src="bower_components/rangy/rangy-highlighter.js"></script>
