--- a/wcagemtool/app/index.html
+++ b/wcagemtool/app/index.html
@@ -20,13 +20,15 @@
 
   <script>
 
-    window.dataLayer = window.dataLayer || [];
+    if (location.host != "administracionelectronica.gob.es") {
+      window.dataLayer = window.dataLayer || [];
 
-    function gtag() { dataLayer.push(arguments); }
+      function gtag() { dataLayer.push(arguments); }
 
-    gtag('js', new Date());
+      gtag('js', new Date());
 
-    gtag('config', 'UA-185820825-1');
+      gtag('config', 'UA-185820825-1');
+    }
 
   </script>
   <!-- Font Awesome -->
@@ -53,8 +55,7 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-translate/angular-translate.js"></script>
-  <script
-    src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+  <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
   <script src="bower_components/rangy/rangy-core.js"></script>
   <script src="bower_components/rangy/rangy-classapplier.js"></script>
   <script src="bower_components/rangy/rangy-highlighter.js"></script>
