#594 conditional Google Analytics script executuion

--- a/wcagemtool/app/index.html
+++ b/wcagemtool/app/index.html
@@ -20,7 +20,7 @@
 
   <script>
 
-    if (location.host != "administracionelectronica.gob.es") {
+    if (location.host == "administracionelectronica.gob.es") {
       window.dataLayer = window.dataLayer || [];
 
       function gtag() { dataLayer.push(arguments); }
