[#2846] Remove JSON references: ODS, XLSX y JSON -> ODS y XLSX

--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -250,8 +250,7 @@
                               los enlaces existentes en la p&aacute;gina analizada. </span>
                            </li>
                            <li><input id="depthReport" type="checkbox" name="depthReport" value="true"><label for="depthReport"><strong>Generar
-                              informe de revis&oacute;n en profundidad</strong></label> <span class="help-block"> Adjunta al informe en PDF un ODS y
-                              un Json para realizar la revis&oacute;n en profundidad de la muestra seleccionada.</span>
+                              informe de revis&oacute;n en profundidad</strong></label> <span class="help-block"> Adjunta al informe en PDF y ODS para realizar la revis&oacute;n en profundidad de la muestra seleccionada.</span>
                            </li>
                         </ul>
                      </div>
