--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -73,8 +73,8 @@
          <h1>
             <img class="pull-left" src="/oaw/images/logo.jpg" alt="Observatorio de Accesibilidad Web" /> <img
                src="/oaw/images/logo-vice-maetd.png"
-               alt="MINHAFP - Ministerio de Pol&iacute;tica Territorial y Funci&oacute;n P&uacute;blica" width="265px" />
-         </h1>
+               alt="Ministerio de Asuntos Econ&oacute;micos y Transformaci&oacute;n digital" width="265px" />
+         </h1> 
       </div>
       <!-- fin cabecera -->
       <div id="main">
@@ -287,8 +287,7 @@
       <!-- Pie -->
       <div id="pie">
          <div id="creditos">
-            Copyright &#169; 2023 - <span class="negrita">Ministerio de Pol&iacute;tica Territorial y Funci&oacute;n
-            P&uacute;blica</span> &nbsp; Versi&#243;n: <b>5.7.0</b>
+            Copyright &#169; 2023 - <span class="negrita">Ministerio de Asuntos Econ&oacute;micos y Transformaci&oacute;n digital</span> &nbsp; Versi&#243;n: <b>5.7.0</b>
        </div>
       </div>
       <!-- Bootstrap core JavaScript -->
