[#6268] Aggregate reports evolution of fixed part incorrectly calculated year 2022

--- a/portal/src/main/webapp/js/tagbox/index.html
+++ b/portal/src/main/webapp/js/tagbox/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf8">
 		<title>jQuery.tagBox example</title>
-		<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.8.3.min.js"></script>
 		<script src="tagbox.min.js"></script>
 
 		<style>
